flag-show fixed on mobile

--- a/app/assets/stylesheets/components/_card_show.scss
+++ b/app/assets/stylesheets/components/_card_show.scss
@@ -120,11 +120,14 @@
   }
   .flag-3letters {
     display: flex;
+      .flag-icon {
+        width: 2em;
+      }
       .flag-letters-vertical {
-      display: block;
-      margin: 0;
+      // display: block;
+      // margin: 0;
       transform: rotate(270deg);
-      margin-right: -10px;
+      margin-right: -20px;
     }
   }
 }
